k8s/api/api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
  namespace: default
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: api
          imagePullPolicy: Always
          image: monarkastoreapirn.azurecr.io/monarka-api:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: https
              containerPort: 3001
              protocol: TCP
