k8s/api/api-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-db
  template:
    metadata:
      labels:
        app: api-db
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: api-db-pvc
      containers:
        - name: keycloak-db
          image: bitnami/postgresql:14
          volumeMounts:
            - name: db-data
              mountPath: /bitnami/postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: api-db-service
spec:
  selector:
    app: api-db
  ports:
    - protocol: TCP
      port: 5433
      targetPort: 5432
