k8s/api/api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
  namespace: default
spec:
  ports:
    - port: 8585
      protocol: TCP
      targetPort: 8585
  selector:
    app: api
  type: ClusterIP
