k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: api
          image: monarkastoreapirn.azurecr.io/monarka-api:latest
          ports:
            - containerPort: 8585
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
    - port: 8585
      targetPort: 8585
