k8s/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-ssl-name: 'api.monarka.local'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: api.monarka.local
      http:
        paths:
          - backend:
              service:
                name: api-service
                port:
                  number: 8585
            path: /
            pathType: ImplementationSpecific
